<resources>
    <string name="app_name">校游</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="default_email">1124281072@qq.com</string>
    <string name="default_username">第0行代码</string>
    <string name="welcomeGuid">点击进入</string>
    <string name="toolbar_title">校游 Show You</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">主页</string>
    <string name="search">发现</string>
    <string name="search_search_history">搜索历史</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="info">资讯</string>
    <string name="toolbar_hint">请输入学校/人名/专业名</string>
    <string name="splash_slogan">离大学更近一点……</string>
    <string name="splash_copyright">Copyright &#169; 2017 CampusTour All Rights Reserved\nPowered by HaiLin DonCe and LiliYang</string>
    <string name="splash_version">V %1$s</string>
    <string name="login_username_hint">手机号</string>
    <string name="password">密码</string>
    <string name="login_text">校游登录</string>
    <string name="welcome_text">欢迎来到校游</string>
    <string name="project_comment">活动评价</string>
    <string name="my_project_text">我的活动</string>
    <string name="my_schoolmate_text">我的校友</string>
    <string name="booked_student_text">活动人员信息</string>
    <string name="remember_password">记住密码</string>
    <string name="register_text">注册账号</string>
    <string name="lookaround">随便看看</string>
    <string name="register_realname_hint">请输入真实姓名</string>
    <string name="register_studentid_hint">学号</string>
    <string name="register_tel_hint">手机号/邮箱</string>
    <string name="register_password_hint">密码</string>
    <string name="register_button_text">注册</string>
    <string name="register_return">返回登录页</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="latest_major">最新活动抢鲜约</string>
    <string name="hot_major">最热活动马上看</string>
    <string name="remote_chat">最新活动抢鲜约</string>
    <string name="recommend">推荐</string>
    <string name="latest">实时</string>
    <string name="major_title">专业列表</string>
    <string name="school_title">学校列表</string>
    <string name="scale_up_show_behavior">com.zju.campustour.view.widget.ScaleUpShowBehavior</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">校友登录</string>
    <string name="userName">用户名</string>
    <string name="regPwd">请输入密码</string>
    <string name="userProjectHint">TA还没有提供相关项目</string>
    <string name="username_hint">输入手机号码</string>
    <string name="pwd_hint">输入登录密码</string>
    <string name="register">注册</string>
    <string name="username_hit">用户名</string>
    <string name="password_hit">用户密码</string>
    <string name="change_user_btn">切换账号</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="jmui_user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4~128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>
    <string name="nickname_hit">昵称</string>
    <string name="jmui_take_new_photo">拍摄照片</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_pick_picture_from_local">选择图片</string>
    <string name="get_photo">　使用照片</string>
    <string name="updating_avatar_hint">正在上传头像</string>
    <string name="avatar_modify_succeed_toast">头像修改成功</string>
    <string name="later_setting">稍后设置</string>
    <string name="saving_hint">正在保存</string>
    <string name="nickname_save_failed">昵称保存失败</string>
    <string name="conv_refresh_succeed">会话同步成功</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="actionbar_msg">聊天</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_without_confirm">添加好友(无好友模式)</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">创建群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索好友</string>
    <string name="friend_request_hit">请输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是</string>
    <string name="send_request">发送请求</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_delete">删除</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="jmui_file_not_found_toast">文件丢失, 尝试重新获取</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="jmui_send">发送</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="type_video">[视频]</string>
    <string name="send_location">发送地理位置</string>
    <string name="permission_should_allow">请允许使用位置权限，否则无法发送位置消息</string>
    <string name="send_location_error">位置截图失败或会话为空</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="somebody_at_me">[有人@我]</string>
    <string name="at_me_button_txt">有人@我</string>
    <string name="hundreds_of_unread_msgs">..\.</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>
    <string name="select_member_to_reply">选择回复的人</string>
    <string name="sex">性别</string>
    <string name="type">用户类型</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="major">专业</string>
    <string name="email_addr">邮箱地址</string>
    <string name="desc">自我介绍</string>
    <string name="change_password">修改密码</string>
    <string name="new_msg_remind_hit">新消息提醒</string>
    <string name="no_disturb_global_hit">全局免打扰</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="chat">聊天</string>
    <string name="contacts">校友</string>
    <string name="undergraduate">本科</string>
    <string name="postgraduate">硕士</string>
    <string name="doctor">博士</string>
    <string name="choose_degree_hint">请选择您获得的最高学位</string>
    <string name="identity_type">身份类型</string>
    <string name="avatar">头像</string>
</resources>