<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/alpha_02_black"
              android:orientation="vertical" >

    <include layout="@layout/menu_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/notification_rl"
            style="@style/SettingItemStyle"
            android:clickable="true"
            >

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/new_msg_remind_hit"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_02_black"/>


        <RelativeLayout
            android:id="@+id/change_password_rl"
            style="@style/SettingItemStyle"
            android:clickable="true">

            <TextView
                android:id="@+id/change_password_tv"
                style="@style/SettingItemTextStyle"
                android:text="@string/change_password"/>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_02_black"/>

        <RelativeLayout
            android:id="@+id/disturb_mode_rl"
            style="@style/SettingItemStyle">

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/no_disturb_global_hit" />

            <com.zju.campustour.view.chatting.widget.SlipButton
                android:id="@+id/global_no_disturb_setting"
                android:layout_width="82dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/about_rl"
            android:layout_marginTop="20dp"
            style="@style/SettingItemStyle">


            <TextView
                style="@style/SettingItemTextStyle"
                android:paddingLeft="20dp"
                android:text="@string/about"
                />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/alpha_02_black" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/check_update_rl"
            style="@style/SettingItemStyle">


            <TextView
                style="@style/SettingItemTextStyle"
                android:paddingLeft="20dp"
                android:text="检查更新"
                />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/logout_rl"
            android:layout_marginTop="20dp"
            style="@style/SettingItemStyle">


            <TextView
                style="@style/SettingItemTextStyle"
                android:paddingLeft="20dp"
                android:text="@string/logout"
                />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
